tests/baselines/reference/checkJsxChildrenProperty13.errors.txt
file.tsx(12,30): error TS2710: 'children' are specified twice. The attribute named 'children' will be overwritten.


==== file.tsx (1 errors) ====
    import React = require('react');
    
    interface ButtonProp {
        a: number,
        b: string,
        children: Button;
    }
    
    class Button extends React.Component<ButtonProp, any> {
        render() {
            // Error children are specified twice
            return (<InnerButton {...this.props} children="hi">
                                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2710: 'children' are specified twice. The attribute named 'children' will be overwritten.
                <div>Hello World</div>
                </InnerButton>);
        }
    }
    
    interface InnerButtonProp {
    	a: number
    }
    
    class InnerButton extends React.Component<InnerButtonProp, any> {
    	render() {
    		return (<button>Hello</button>);
    	}
    }
    